# bpf_performance

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/: dependabot.yml
.github/workflows/: Build.yml  CICD.yml  Test.yml  UploadPerfResults.yml  codeql-analysis.yml  main.yml  scorecards.yml
bpf/: CMakeLists.txt  baseline.c  bpf.h.inc  generic_map.c  hash_of_map.c  helpers.c  lpm.c  lpm.h  map_in_map.c  max_tail_call.c  ringbuf.c  rolling_lru.c  tail_call.c  tests.yml  xdp.c
cmake/: options.cmake  platform.cmake  version.cmake
docker/linux/: Dockerfile
docs/: DevelopmentGuide.md  Governance.md  Graphing of data via Grafana.md  TestingGuide.md
ebpf/nuget/eBPF-for-Windows.x64.1.1.0/: [Content_Types].xml  eBPF-for-Windows.x64.nuspec
ebpf/nuget/eBPF-for-Windows.x64.1.1.0/_rels/: .rels
grafana/: BPF Performance - Ubuntu 22.04.json  BPF Performance - Windows 2019.json  BPF Performance - Windows 2022.json  docker-compose.yml
load/: CMakeLists.txt  bpf_load.cc
runner/: CMakeLists.txt  options.cc  options.h  runner.cc
runner/tests/: elf_file_not_found.yaml  empty_program_cpu_assignment.yaml  function_map_state_preparation_not_found.yaml  function_program_cpu_assignment_not_found.yaml  invalid_program_cpu_assignment_value.yaml  map_state_preparation_iteration_count_not_found.yaml  map_state_preparation_program_not_found.yaml  missing_elf_file.yaml  missing_iteration_count.yaml  missing_name.yaml  missing_program_cpu_assignment.yaml
scripts/: .check-license.ignore  Fetch-LatestArtifacts.ps1  check_perf_results.sql  create_table.sql  create_table_postfgres.sql  gather_csv.sh  process_results.py  two-machine-perf.ps1  xdp_version.txt
